logs/dag_id=insert_date/run_id=manual__2025-01-12T195722.664800+0000/task_id=create_log_sheme/attempt=1.log
[2025-01-12T19:57:31.782+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.create_log_sheme manual__2025-01-12T19:57:22.664800+00:00 [queued]>
[2025-01-12T19:57:31.797+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.create_log_sheme manual__2025-01-12T19:57:22.664800+00:00 [queued]>
[2025-01-12T19:57:31.798+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-12T19:57:32.026+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): create_log_sheme> on 2025-01-12 19:57:22.664800+00:00
[2025-01-12T19:57:32.032+0000] {standard_task_runner.py:60} INFO - Started process 8289 to run task
[2025-01-12T19:57:32.039+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'create_log_sheme', 'manual__2025-01-12T19:57:22.664800+00:00', '--job-id', '2852', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmpywr_wjah']
[2025-01-12T19:57:32.043+0000] {standard_task_runner.py:88} INFO - Job 2852: Subtask create_log_sheme
[2025-01-12T19:57:32.119+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.create_log_sheme manual__2025-01-12T19:57:22.664800+00:00 [running]> on host 711845a6becd
[2025-01-12T19:57:32.236+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='create_log_sheme' AIRFLOW_CTX_EXECUTION_DATE='2025-01-12T19:57:22.664800+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-12T19:57:22.664800+00:00'
[2025-01-12T19:57:32.238+0000] {sql.py:276} INFO - Executing: create schema if not exists "log";

create table if not exists
	log.logt (
		execution_datetime TIMESTAMP not null,
		event_datetime TIMESTAMP not null,
		event_name VARCHAR(30) not null,
);
[2025-01-12T19:57:32.250+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-12T19:57:32.267+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-12T19:57:32.348+0000] {sql.py:450} INFO - Running statement: create schema if not exists "log";

create table if not exists
	log.logt (
		execution_datetime TIMESTAMP not null,
		event_datetime TIMESTAMP not null,
		event_name VARCHAR(30) not null,
);, parameters: None
[2025-01-12T19:57:32.354+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: ")")
LINE 8: );
        ^

[2025-01-12T19:57:32.368+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=create_log_sheme, execution_date=20250112T195722, start_date=20250112T195731, end_date=20250112T195732
[2025-01-12T19:57:32.385+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 2852 for task create_log_sheme (ОШИБКА:  ошибка синтаксиса (примерное положение: ")")
LINE 8: );
        ^
; 8289)
[2025-01-12T19:57:32.412+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-12T19:57:32.470+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
